<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.e_commerce.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_account"
        android:name="com.example.e_commerce.ui.my_account.MyAccountFragment"
        android:label="@string/menu_my_account"
        tools:layout="@layout/fragment_my_account2" />

    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.e_commerce.ui.my_orders.MyOrdersFragment"
        android:label="@string/menu_my_orders"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.e_commerce.ui.my_cart.MyCartFragment"
        android:label="@string/menu_my_cart"
        tools:layout="@layout/fragment_my_cart" />

    <fragment
        android:id="@+id/nav_my_wishlist"
        android:name="com.example.e_commerce.ui.my_wishlist.MyWishListFragment"
        android:label="@string/menu_my_wishlist"
        tools:layout="@layout/fragment_my_wish_list" />
</navigation>